add click event logic, embedded NYC Subway Twitter

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-#oneTrainCard, #twoTrainCard, #threeTrainCard {
+#oneTrainCard, #twoTrainCard, #threeTrainCard, #messageCardOneTrain, #messageCardTwoTrain, #messageCardThreeTrain {
     display: none;
 }
 
