--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 .mainContainer {
   background-color: #222;
-  padding: 20px 20px 50px 20px;
+  padding: 20px 20px 20px 20px;
   border: #222 10px solid;
   box-shadow: 0px 0px 0px 10px white inset;
 }
@@ -17,6 +17,7 @@ body {
   text-shadow: 2px 2px 4px #000000;
   border-bottom: white 5px solid;
 }
+
 h2 {
   font-size: 6.5rem;
   margin: 0;
@@ -33,6 +34,15 @@ h4 {
   font-size: 2rem;
   color: wheat;
   letter-spacing: -1px;
+  line-height: 10px;
+}
+h5 {
+  color: wheat;
+  font-size: 1rem;
+  line-height: 3px;
+  letter-spacing: 1px;
+  margin: 5px 0 0 0;
+  text-align: left;
 }
 .pure-g {
   display: flex;
@@ -53,7 +63,7 @@ h4 {
   z-index: 1;
 }
 .numberChoices {
-  padding: 35px 0 50px 0;
+  padding: 15px 0 50px 0;
 }
 .header {
   display: flex;
@@ -82,4 +92,14 @@ h4 {
   display: flex;
   justify-content: right;
   padding: 0 5px;
+  cursor: pointer;
+}
+#backnav {
+  display: none;
+}
+.weather {
+  display: flex;
+  justify-content: flex-end;
+  height: 30px;
+  align-items: baseline;
 }
