added styling to chat to match main page

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -30,6 +30,12 @@ h3 {
   padding-top: 15px;
   color: white;
 }
+a {
+  text-decoration: none;
+}
+a > h3:hover {
+  color: red;
+}
 h4 {
   font-size: 2rem;
   color: wheat;
@@ -61,6 +67,13 @@ h5 {
   text-align: center;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   z-index: 1;
+  cursor: pointer;
+  opacity: 0.8;
+}
+#oneTrain:hover,
+#twoTrain:hover,
+#threeTrain:hover {
+  opacity: 1;
 }
 .numberChoices {
   padding: 15px 0 50px 0;
