--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -180,7 +180,7 @@ main,
   }
   #user-container {
     top: 72px;
-    background-color: rgb(3, 155, 229);
+    background-color: #263238;
     height: 38px;
     padding-top: 3px;
     padding-right: 2px;
